# DevCrew-Agents

./: .gitignore  README.md  pyproject.toml
src/: agent_loop.py  crew.py  main.py  orchestrator.py  web_app.py
src/communication/: __init__.py  communication_tools.py  knowledge_store.py  memory_manager.py  message_bus.py
src/config/: agents.yaml  tasks.yaml
src/tools/: __init__.py  custom_tool.py
src/web/static/: app.js  style.css
src/web/templates/: index.html
