[project]
name = "devcrew_agents"
version = "0.1.0"
description = "DevCrew-Agents using crewAI"
authors = [{ name = "Pryyyynz", email = "dugboryeleprince@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0",
    "chromadb>=0.4.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0"
]

[project.scripts]
devcrew_agents = "src.main:run"
run_crew = "src.main:run"
train = "src.main:train"
replay = "src.main:replay"
test = "src.main:test"
web = "src.main:run_web"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.crewai]
type = "crew"
